# obelisk

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
www/: index.html
www/css/: style.css
www/js/: atmosphere.js  audio.js  main.js  profile.js  render2d.js  scene3d.js  scoring.js  story.js  tetris.js
