[package]
name = "obelisk"
version = "2.1.0"
description = "OBELISK — four faces of falling blocks. Survive the monolith."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
